# c_database

./: .gitignore  CMakeLists.txt  compile.c
linux/: CMakeLists.txt  compile.c  run  setup  setup.sh
linux/src/: main.c  mainWindow.c  main_window.c  main_window.h  menubar.c  menubar.h  settings.h
mac/: compile.c
mac/src/: settings.h
mac/try/: strncpy_test.c
src/: main.c
windows/: Database.sln  Database.vcxproj  event_handler.c  event_handler.h  main_window.c  menubar.c  menubar.h
windows/Database/x64/Debug/: Database.exe.recipe  Database.ilk  vc143.idb
